card spacing fixed

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a {
 
 .assignment-card {
   margin-top: 10vh;
-  margin: 0 1% 0 1%;
+  margin: 1% 1% 1% 1%;
   min-width: 280px;
   width: 23%;
   height: 32em;
